packages/treesitter/test/corpus/basic.txt
================================================================================
DOCUMENT
================================================================================

---
model: gemini-2.5-flash
---
Hello world!

--------------------------------------------------------------------------------

(document
  (frontmatter
    (frontmatter_delimiter)
    (yaml_content
      (yaml_line
        key: (yaml_key)
        value: (yaml_value)))
    (frontmatter_delimiter))
  (template_body
    (text)))

================================================================================
HANDLEBARS EXPRESSION
================================================================================

Hello {{ name }}!

--------------------------------------------------------------------------------

(document
  (template_body
    (text)
    (handlebars_expression
      (expression_content
        (variable_reference
          (path))))
    (text)))

================================================================================
ROLE MARKER
================================================================================

{{role "system"}}
You are helpful.

--------------------------------------------------------------------------------

(document
  (template_body
    (handlebars_expression
      (expression_content
        (helper_name)
        (argument
          (string_literal))))
    (text)))

================================================================================
EACH LOOP
================================================================================

{{#each items}}
  - {{ this }}
{{/each}}

--------------------------------------------------------------------------------

(document
  (template_body
    (handlebars_block
      (block_expression
        name: (block_name)
        (argument
          (variable_reference
            (path))))
      (text)
      (handlebars_expression
        (expression_content
          (variable_reference
            (path))))
      (close_block
        name: (block_name)))
    (text)))

================================================================================
PARTIAL
================================================================================

{{> header}}

--------------------------------------------------------------------------------

(document
  (template_body
    (handlebars_expression
      (expression_content
        (partial_reference)))
    (text)))

================================================================================
COMMENT
================================================================================

{{! This is a comment }}

--------------------------------------------------------------------------------

(document
  (template_body
    (handlebars_comment)
    (text)))

================================================================================
FRONTMATTER WITH CONFIG
================================================================================

---
model: gemini-2.5-flash
config:
  temperature: 0.7
input:
  schema:
    name: string
---

Hello {{ name }}!

--------------------------------------------------------------------------------

(document
  (frontmatter
    (frontmatter_delimiter)
    (yaml_content
      (yaml_line
        key: (yaml_key)
        value: (yaml_value))
      (yaml_line
        key: (yaml_key)
        value: (yaml_value))
      (yaml_line
        key: (yaml_key)
        value: (yaml_value))
      (yaml_line
        key: (yaml_key)
        value: (yaml_value)))
    (frontmatter_delimiter))
  (template_body
    (text)
    (handlebars_expression
      (expression_content
        (variable_reference
          (path))))
    (text)))

================================================================================
LICENSE HEADER
================================================================================

# Copyright 2026 Google LLC
# Some license text
---
model: gemini-2.5-flash
---
Hello

--------------------------------------------------------------------------------

(document
  (license_header
    (header_comment)
    (header_comment))
  (frontmatter
    (frontmatter_delimiter)
    (yaml_content
      (yaml_line
        key: (yaml_key)
        value: (yaml_value)))
    (frontmatter_delimiter))
  (template_body
    (text)))

================================================================================
HISTORY MARKER
================================================================================

{{history}}

--------------------------------------------------------------------------------

(document
  (template_body
    (handlebars_expression
      (expression_content
        (helper_name)))
    (text)))
